removing issue with overlapping menu

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5 {
 
 h1 {
 	font-size: 24px;
-	font-weight: 600;
+	font-weight: 500;
 }
 
 h2 {
