--- a/assets/css/custom-main.css
+++ b/assets/css/custom-main.css
@@ -38,8 +38,8 @@ body {
 
 #header .bcgov-title h1 {
     color: #fff;
-    font-size: 35px;
-    margin-bottom: 0;
+    /*font-size: 35px;*/
+    margin-bottom: 10px;
     margin-left: 15px;
     margin-top: 20px;
 }
@@ -129,7 +129,7 @@ a label.env-username {
 
 @media (min-width: 768px) {
     .env-container {
-        padding-top: 120px !important;
+        padding-top: 150px !important;
         position: relative;
     }
     #breadcrumbContainer {
